[project]
name = "cbz_merger"
version = "0.1.0"
description = "Merges multiple CBZ/CBR files into one"
readme = "README.md"
dependencies = [
    "build>=1.2.2.post1",
    "rarfile>=4.2",
]
authors = [
    { name = "Jury Razumau", email = "mail@razumau.net" }
]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbz_merger"]

[project.scripts]
cbz_merger = "cbz_merger.cli:main"
